force-app/main/default/objects/QAC_Manage_File__mdt/QAC_Manage_File__mdt.object-meta.xml
<CustomObject>
    <label>QAC Manage File</label>
    <pluralLabel>QAC Manage Files</pluralLabel>
</CustomObject>