force-app/main/default/objects/QAC_Manage_File__mdt/fields/Case_Closed__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case_Closed</label>
    <type>Checkbox</type>
</CustomField>