force-app/main/default/objects/QAC_Manage_File__mdt/fields/Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type__c</fullName>
    <label>Case_Record_Type</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>