force-app/main/default/objects/QAC_Manage_File__mdt/fields/No_of_Days_from_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_from_Closed_Date__c</fullName>
    <description>QAC - Manage delete file.</description>
    <label>No_of_Days_from_Closed_Date</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>